# 3d_viewer_tauri

./: .gitignore  .versionrc  CHANGELOG.md  PORTING_BASELINE.md  README.md  eslint.config.mjs  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.jsdom.config.ts
.github/workflows/: ci.yml
docs/: release-process.md  versioning-and-conventions.md
scripts/: ci.ps1  ci.sh  copy-draco-wasm.mjs  sync-version.mjs
src/: electron-api.ts  env.ts  polyfills.ts  tauri-config.test.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs.rs  window.rs
src/__tests__/: electron-api.test.ts  env.test.ts
src/types/: electron.d.ts
