[package]
name = "faicad-3d-viewer"
version = "1.1.1"
description = "Faicad 3D Viewer Desktop Application"
authors = ["Faicad"]
license = "LGPL-2.0-only"
edition = "2021"

[lib]
name = "three_d_viewer_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
